# vscode_project_template

./: .gitignore  README.md
_windows/cpp_cmake/: main.cpp  test.cpp  清理.bat
_windows/cpp_gcc_multi_file/: 清理.bat
_windows/cpp_msvc_multi_file/: helloworld.cpp
_windows/cpp_msvc_single_file/: helloworld.cpp  清理.bat
_windows/python_conda/: dev.env  prod.env
_windows/rust-exe2/: README.md
macos/clang_cpp_debug/: README.md
macos/tauri-vue3-vite/: .env  README.md  package.json
web-vue3-ts/: .gitignore
web-vue3-ts-webpack/: README.md
web-vue3-ts-webpack/demo/: package.json
windows/: README.md
windows/chrome_extension/: README.md
windows/cpp_cmake/: CMakeLists.txt  README.md  helloworld.cpp  main.cpp  start.cpp  swap.cpp
windows/cpp_gcc_multi_file/: helloworld.cpp
windows/cpp_gcc_single_file/: README.md  helloworld.cpp
windows/cpp_msvc_multi_file/: README.md  func.cpp
windows/cpp_msvc_single_file/: README.md
windows/electron/: README.md  index.html  index.js  mainModel.js  package-lock.json  package.json
windows/electron-vue/: README.md
windows/javascript-demo/: README.md
windows/node.js/: README.md  hello.js  package-lock.json  package.json
windows/python_conda/: README.md  helloworld.py
windows/rust-exe1-deprecate/: README.md
windows/rust-exe2/: rust-boilerplate.rar
windows/rust-helloworld/: 参考.txt
windows/typescript-demo1/: README.md  package.json
windows/typescript-demo2/: package.json  (+1 more)
windows_cpp_gcc_multi_file/: README.md
windows_cpp_gcc_single_file/: README.md
windows_cpp_msvc_multi_file/: func.cpp  helloworld.cpp
(+106 files in other folders)
